# pydcl

./: .coverage  .gitignore  LICENSE  README.md  __init__.py  coverage.xml  pyproject.toml  run_tests.sh  setup.py  test-results.xml
docs/: test_execution_guide.md
pydcl/: __init__.py  cli.py  cost_scores.py  github_client.py  models.py  utils.py
pydcl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  conftest_backup.py  conftest_enhanced.py  mock_infrastructure.py  pytest.ini  spec.py  test_cli.py  test_core_scores.py  test_github_cli.py  test_models.py  test_utils.py
tests/integrations/: test_ecosystem_integration.py  test_pipeline.py
tests/unit/: test_cli.py  test_github_client.py  test_models.py  test_utils.py
